menu (2.1.10-2) unstable; urgency=low

  * The "unreleased" release. 

 -- Bill Allombert <ballombe@debian.org>  Fri, 12 Mar 2004 15:27:16 +0100

menu (2.1.10-1) unstable; urgency=low

  * The "Friday 12" release.
  * Morten Brix Pedersen:
    - replacewith($str, $replace, $with) now outputs an error if $replace and
    $with isn't the same length.
    - Don't segfault when there are syntax errors in translate_menus
      (Closes: #221757)
    - Unknown identifiers now generates a warning instead of an error.
    - Implement a replace() function. Closes: #223948
    - Modify basename() function to do as advertised in the documentation.
    - When conversion for a translated menu section failed, fallback to the
    original string.
    - Implement a shell() function.
  * Update Dutch menu message translation. Closes: #230525. Thanks Tim
    Dijkstra.
  * Add Chinese menu messages and sections translations. Closes: #232403.
    Thanks Carlos Z.F. Liu and Yongtao Yang.
  * Remove dconfig-text entry form gpm default menu entry: Closes: #234178.
  * Document that menu files must be encoded in 7bit only.

 -- Bill Allombert <ballombe@debian.org>  Fri, 12 Mar 2004 13:39:31 +0100

menu (2.1.9-5) unstable; urgency=low

  * The "calc inflates severity" release. 
  * Add Polish menu message translation and update Polish menu section
    translation. Thanks Marcin Owsiany.
  * Update French menu section translation. Closes: #225716. Thanks
    Jean-Philippe Guérard.
  * Fix typos in error messages. Closes: #227070. Thanks Tommi Vainikainen.
  * Add Finnish translations. Closes: #227038. Thanks Tommi Vainikainen.
  * Add Brazillian menu message translation. Closes: #227627. Thanks Gustavo 
    Noronha Silva. 
  * Add GPL boiler-plate to all C++ source files.
  * Add Dutch menu message translation. Closes: #228221. Thanks Tim Dijkstra.
  * Remove documentation of non-existent function process_menudirs.  
    Closes: #228448. Thanks Chris Cheney.