@@ -1,6 +1,11 @@
 menu (2.1.10-2) unstable; urgency=low
 
   * The "unreleased" release. 
+  * Morten Brix Pedersen:
+    - Only enable translated section names when both 'outputencoding' and
+    'repeat_lang' has been set.
+    - Set repeat_lang="LOCALE" per default. menu-methods now only need to set
+    outputencoding in order to enable translations.
 
  -- Bill Allombert <ballombe@debian.org>  Fri, 12 Mar 2004 15:27:16 +0100
 
